# soroban-guard

./: .gitignore  .soroban-security-guard.toml.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
benches/: memory_usage.rs  performance.rs
docs/: architecture.md  user-guide.md
examples/: safe_contract.rs  vulnerable_contract.rs
issues/: issue_1_build_errors.md  issue_2_enhance_ast_parser.md  issue_3_add_data_flow_analysis.md  issue_4_web_interface.md  issue_5_vscode_extension.md  issue_6_ci_cd_improvements.md  issue_7_frontend_enhancements.md  issue_8_smart_contract_integration.md
scripts/: build.ps1  build.sh  test_examples.sh
src/: ast.rs  cli.rs  config.rs  lib.rs  main.rs  report.rs  rules.rs  scanner.rs
templates/: report.css
tests/: integration_tests.rs  unit_tests.rs
