[package]
name = "soroban-security-guard"
version = "0.1.0"
edition = "2021"
authors = ["Security Guard Team"]
description = "Automated invariant scanner for Soroban smart contracts"
license = "MIT"
repository = "https://github.com/soroban-security-guard/soroban-security-guard"

[dependencies]
soroban-sdk = "20.0.0"
soroban-spec = "20.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
walkdir = "2.0"
colored = "2.0"
tabled = "0.15"
once_cell = "1.0"
indexmap = "1.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bin]]
name = "soroban-security-guard"
path = "src/main.rs"

[lib]
name = "soroban_security_guard"
path = "src/lib.rs"
